--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "next": "latest",
+    "next-seo": "^6.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
