--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@types/react-responsive": "^8.0.5",
     "gray-matter": "^4.0.3",
     "next": "latest",
     "next-seo": "^6.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-responsive": "^9.0.2",
     "remark": "^14.0.2",
     "remark-html": "^15.0.2"
   },
