--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@types/prismjs": "^1.26.0",
     "@types/react-responsive": "^8.0.5",
     "gray-matter": "^4.0.3",
     "next": "latest",
     "next-seo": "^6.0.0",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-responsive": "^9.0.2",
