--- a/package.json
+++ b/package.json
@@ -14,17 +14,21 @@
     "gray-matter": "^4.0.3",
     "next": "latest",
     "next-seo": "^6.0.0",
+    "prism-themes": "^1.9.0",
     "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-responsive": "^9.0.2",
-    "remark": "^14.0.2",
-    "remark-html": "^15.0.2"
+    "remark": "^14.0.2"
   },
   "devDependencies": {
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "prettier": "^2.8.7",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0"
   }
 }
