--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-responsive": "^9.0.2",
+    "recoil": "^0.7.7",
     "remark": "^14.0.2",
     "remark-html": "^15.0.2"
   },
