--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/prismjs": "^1.26.0",
     "@types/react-responsive": "^8.0.5",
     "gray-matter": "^4.0.3",
+    "marked": "^5.0.2",
     "next": "latest",
     "next-seo": "^6.0.0",
     "prism-themes": "^1.9.0",
