마크다운 뷰어로 고치기

--- a/package.json
+++ b/package.json
@@ -11,17 +11,26 @@
     "@emotion/styled": "^11.10.6",
     "@types/prismjs": "^1.26.0",
     "@types/react-responsive": "^8.0.5",
+    "@types/react-syntax-highlighter": "^15.5.6",
     "gray-matter": "^4.0.3",
     "marked": "^5.0.2",
     "next": "latest",
+    "next-compose-plugins": "^2.2.1",
     "next-seo": "^6.0.0",
+    "next-transpile-modules": "^10.0.0",
     "prism-themes": "^1.9.0",
     "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-markdown": "^8.0.6",
+    "react-multi-carousel": "^2.8.2",
     "react-responsive": "^9.0.2",
+    "react-syntax-highlighter": "^15.5.0",
     "recoil": "^0.7.7",
+    "rehype-code-titles": "^1.2.0",
     "remark": "^14.0.2",
+    "remark-gfm": "^3.0.1",
     "remark-html": "^15.0.2"
   },
   "devDependencies": {
