--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@types/lodash": "^4.14.194",
     "@types/prismjs": "^1.26.0",
     "@types/react-responsive": "^8.0.5",
     "@types/react-syntax-highlighter": "^15.5.6",
     "gray-matter": "^4.0.3",
+    "lodash": "^4.17.21",
     "marked": "^5.0.2",
     "next": "latest",
     "next-compose-plugins": "^2.2.1",
