--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 4000",
-    "build": "next build",
+    "build": "next build && next-sitemap && next export",
     "start": "next start"
   },
   "dependencies": {
@@ -42,6 +42,7 @@
     "@typescript-eslint/parser": "^5.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "next-sitemap": "^4.1.3",
     "prettier": "^2.8.7",
     "typescript": "5.0.4"
   }
