--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 4000",
-    "build": "next build && next-sitemap && next export",
+    "build": "next build && next-sitemap",
     "start": "next start"
   },
   "dependencies": {
